php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #28725 Typo in error message of mime_content_type and others
Submitted: 2004-06-10 13:20 UTC Modified: 2004-12-16 13:36 UTC
Votes:1
Avg. Score:4.0 ± 0.0
Reproduced:1 of 1 (100.0%)
Same Version:0 (0.0%)
Same OS:0 (0.0%)
From: trancer at trancer dot nl Assigned: sniper (profile)
Status: Closed Package: *General Issues
PHP Version: 4CVS, 5CVS (2004-12-15) OS: *
Private report: No CVE-ID: None
 [2004-06-10 13:20 UTC] trancer at trancer dot nl
Description:
------------
Fatal error: mime_magic could not be initialized, magic file (null) is not avaliable in ...

Should be available ofcourse. A small check on lxr.php.net reveals a few more of these:

http://lxr.php.net/search?string=avaliable

Reproduce code:
---------------
echo mime_content_type('blabla');

Expected result:
----------------
Fatal error: mime_magic could not be initialized, magic file (null) is not availiable in ...

Actual result:
--------------
Fatal error: mime_magic could not be initialized, magic file (null) is not avaliable in ...

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2004-12-16 13:36 UTC] sniper@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sun Sep 27 22:00:02 2026 UTC