- Fix typo (avaliable -> available). (bug #28725)