ext/pspell/tests/01pspell_basic.phpt
@@ -4,11 +4,11 @@ pspell basic tests (warning: may fail with pspell/aspell < GNU Aspell 0.50.3)
 <?php 
 	if (!extension_loaded("pspell")) print "skip"; 
 	if (!@pspell_new ("en", "", "", "", (PSPELL_FAST|PSPELL_RUN_TOGETHER))) {
-		die("skip English dictionary is not avaliable");
+		die("skip English dictionary is not available");
 	}
 ?>
 --FILE--
-<?php // $Id: 01pspell_basic.phpt,v 1.5 2004/05/19 08:54:51 helly Exp $
+<?php // $Id: 01pspell_basic.phpt,v 1.6 2004/12/16 12:34:31 sniper Exp $
 
 error_reporting(E_ALL);
 $string = "";
